--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							</button>
 							<div class="collapse navbar-collapse" id="myd">
 								<ul class="navbar-nav" style="font-size: 20px;">
-									<li class="navbar-item me-2"><a href="icecream.html" class="nav-link" style="color:burlywood;">HOME</a></li>
+									<li class="navbar-item me-2"><a href="index.html" class="nav-link" style="color:burlywood;">HOME</a></li>
 									<li class="navbar-item me-2"><a href="#abt" class="nav-link" style="color:burlywood;">ABOUT</a></li>
 									<li class="navbar-item me-2"><a href="#menu"class="nav-link" style="color:burlywood;">MENU</a></li>
 									<li class="navbar-item me-2"><a href="#spe"class="nav-link" style="color:burlywood;">SPECIAL</a></li>
